# la-cache

./: README.md
Example/: Example-Plots.ipynb
Example/Burst/: Bilibili_b.txt  Wikipedia_b.txt
Example/ProcRes/: Bilibili.txt  Synthetic.txt  Wikipedia.txt
Example/Verify/: Bilibili_10000l_all.txt  Bilibili_10000l_empi.txt  Bilibili_10000l_genempi.txt  Bilibili_10000l_zipf.txt  Bilibili_1000l_all.txt  Bilibili_1000l_empi.txt  Bilibili_1000l_genempi.txt  Bilibili_1000l_zipf.txt  Bilibili_100l_all.txt  Bilibili_100l_empi.txt  Bilibili_100l_genempi.txt  Bilibili_100l_zipf.txt  Bilibili_10l_all.txt  Bilibili_10l_empi.txt  Bilibili_10l_genempi.txt  Bilibili_10l_zipf.txt  Bilibili_1l_all.txt  Bilibili_1l_empi.txt  Bilibili_1l_genempi.txt  Bilibili_1l_zipf.txt  Bilibili_2000l_all.txt  Bilibili_2000l_empi.txt  Bilibili_2000l_genempi.txt  Bilibili_2000l_zipf.txt  Bilibili_200l_all.txt  Bilibili_200l_empi.txt  Bilibili_200l_genempi.txt  Bilibili_200l_zipf.txt  Bilibili_5000l_all.txt  Bilibili_5000l_empi.txt  Bilibili_5000l_genempi.txt  (+41 more)
ProcData/: Burstiness.py  ComLats.py  README.md  ResProc.py  Verification.py
Prototype/: README.md
Simulator/: README.md  Runs.py
Simulator/Delayed-Source-Code/caching/: CMakeLists.txt
Simulator/Delayed-Source-Code/caching/include/: cache_base.hpp  cache_belady.hpp  cache_common.hpp
Simulator/Delayed-Source-Code/caching/src/: cache_2q.cpp  cache_aggdelay.cpp  cache_belady.cpp  cache_beladys.cpp  cache_la.cpp  cache_lfu.cpp  cache_lhd.cpp  cache_lhd_aggdelay.cpp  cache_lru.cpp  cache_lru_aggdelay.cpp  cache_lruk.cpp
(+18 files in other folders)
